# embassy-os

./: .git-blame-ignore-revs  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  angular.json  index.html  package-lock.json  package.json  taplo.toml
projects/start-cli/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.mk
projects/start-cli/man/: start-cli-auth-logout.1  start-cli-backup-target-delete-legacy.1  start-cli-backup-target.1  start-cli-diagnostic-update.1  start-cli-diagnostic.1  start-cli-init-key.1  start-cli-net-gateway-check-dns.1  start-cli-net-gateway-check-port-v6.1  start-cli-net-gateway.1  start-cli-net-tunnel-update.1  start-cli-net-tunnel.1  start-cli-package-host-binding-set-gua-wan.1  start-cli-package-host-binding-set-range-address-enabled.1  start-cli-package-host-binding.1  start-cli-pubkey.1  start-cli-s9pk-init-package.1  start-cli-s9pk-init-workspace.1  start-cli-s9pk-list-ingredients.1  start-cli-s9pk-pack.1  start-cli-s9pk.1  start-cli-server-host-binding-set-gua-wan.1  start-cli-server-host-binding-set-range-address-enabled.1  start-cli-server-host-binding.1  start-cli-server-restart.1  start-cli-server-shutdown.1  start-cli-tunnel-auth-logout.1  start-cli-tunnel-device-add.1  start-cli-tunnel-device-set-auto-port-forward.1  start-cli-tunnel-device-set-dns-injection.1  start-cli-tunnel-device-set-kind.1  start-cli-tunnel-device-set-wan.1  start-cli-tunnel-device-show-config.1  start-cli-tunnel-device.1  start-cli-tunnel-dns-add.1  start-cli-tunnel-dns-list.1  start-cli-tunnel-dns-remove.1  start-cli-tunnel-dns.1  start-cli-tunnel-http-redirect-list.1  start-cli-tunnel-http-redirect-set-enabled.1  start-cli-tunnel-http-redirect.1  (+15 more)
projects/start-cli/src/: main.rs
projects/start-os/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV_TODO.md  README.md  build.mk  startos-restart.service  startos-shutdown.service
projects/start-os/backup-fs/: Cargo.toml  DESIGN.md  build-backup-fs.sh
projects/start-os/backup-fs/benches/: throughput.rs
projects/start-os/backup-fs/examples/: benchmark.rs
projects/start-os/backup-fs/src/: aligned_io.rs  blockstore.rs  compress.rs  contents.rs  ctrl.rs  directory.rs  error.rs  handle.rs  inode.rs  lib.rs  main.rs  seglog.rs  superblock.rs  tests.rs  vault.rs
projects/start-os/container-runtime/: AGENTS.md  CONTRIBUTING.md  README.md  install-dist-deps.sh  jest.config.js  package-lock.json  package.json
projects/start-os/container-runtime/__mocks__/: mime.js
projects/start-os/container-runtime/src/: index.ts
projects/start-os/container-runtime/src/Adapters/: EffectCreator.ts  RpcListener.ts
projects/start-os/debian/: postinst
projects/start-os/docs/: book.toml
projects/start-os/docs/src/: architecture.md  backup-create.md  cgnat.md  change-password.md  clearnet.md  cli-reference.md  faq.md  forgot-password.md  gateways.md  initial-setup.md  installing-startos.md  interfaces.md  mdns.md  networking-strategy.md  outbound-vpn.md  public-ip.md  tasks.md  trust-ca.md  update-040.md
projects/start-os/man/: start-container-bind-mount.1  start-container-notification.1  start-container.1
projects/start-os/web/setup-wizard/: tsconfig.json
projects/start-registry/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.mk
projects/start-registry/man/: start-registry-os-asset-get-img.1  start-registry-os-asset-get-iso.1  start-registry-os-asset-get-squashfs.1  start-registry.1
projects/start-registry/src/: main.rs
projects/start-tunnel/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.mk  start-tunneld.service
projects/start-tunnel/docs/: book.toml
projects/start-tunnel/docs/src/: README.md  SUMMARY.md  architecture.md  cli-reference.md  devices.md  dns-records.md  faq.md  http-redirects.md  installing.md  ipv4.md  ipv6.md  port-forwarding.md  published-ports.md  subnets.md
projects/start-tunnel/man/: start-tunnel-auth-logout.1  start-tunnel-device-show-config.1  start-tunnel-http-redirect-list.1  start-tunnel-http-redirect-set-enabled.1  start-tunnel-http-redirect.1  start-tunnel-pinhole-add.1  start-tunnel-pinhole-remove.1  start-tunnel-pinhole-set-enabled.1  start-tunnel-pinhole-update-label.1  start-tunnel-pinhole.1  start-tunnel-subnet-set-ipv6.1  start-tunnel-subnet.1  start-tunnel.1
projects/start-tunnel/src/: main.rs
projects/start-tunnel/web/scripts/: check-i18n.mjs
projects/start-tunnel/web/src/: styles.scss
projects/start-wrt/backend/ctrl/: Cargo.toml  build.rs
projects/start-wrt/backend/uciedit/: Cargo.toml
shared-libs/crates/exver/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  exver.d.ts
shared-libs/crates/exver/src/: exver.rs  lib.rs  test.rs  wasm.rs
shared-libs/crates/imbl-value/: CONTRIBUTING.md  Cargo.toml
shared-libs/crates/imbl-value/src/: de.rs  lib.rs  ser.rs  ts_rs.rs
shared-libs/crates/jsonpath/: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
shared-libs/crates/jsonpath/benchmark/: Cargo.toml
shared-libs/crates/jsonpath/docs/: 0.bootstrap.js  bootstrap.js  index.html
shared-libs/crates/jsonpath/lua/: Cargo.toml
shared-libs/crates/jsonpath/src/: lib.rs
shared-libs/crates/jsonpath/tests/: lib.rs  readme.rs  selector.rs
shared-libs/crates/jsonpath/wasm/: Cargo.toml  README.md
shared-libs/crates/patch-db/json-patch/: Cargo.toml
shared-libs/crates/patch-db/json-ptr/: Cargo.toml
shared-libs/crates/patch-db/macro/: Cargo.toml
shared-libs/crates/patch-db/macro-internals/: Cargo.toml
shared-libs/crates/pi-beep/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  build-pi-beep.sh
shared-libs/crates/rpc-toolkit/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
shared-libs/crates/rpc-toolkit/src/: command_helpers.rs  lib.rs  type-helpers.ts
shared-libs/crates/yasi/: AGENTS.md  CONTRIBUTING.md  Cargo.toml
shared-libs/crates/yasi/src/: lib.rs  ts_rs.rs
(+794 files in other folders)
