[package]
edition = "2024"
license = "MIT"
name = "start-cli"
repository = "https://github.com/Start9Labs/start-technologies"
version = "1.0.3"                                               # VERSION_BUMP

[[bin]]
name = "start-cli"
path = "src/main.rs"

[features]
beta = ["start-core/beta"]
console = ["start-core/console"]
default = []
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
start-core = { path = "../../shared-libs/crates/start-core" }
tracing = "0.1.40"
