[package]
edition = "2024"
license = "MIT"
name = "start-os"
repository = "https://github.com/Start9Labs/start-technologies"
version = "0.4.0-beta.10"                                       # VERSION_BUMP

[[bin]]
name = "startbox"
path = "src/bin/startbox.rs"

[[bin]]
name = "start-container"
path = "src/bin/start-container.rs"

[features]
beta = ["start-core/beta"]
console = ["start-core/console"]
default = []
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
include_dir = "0.7.3"
start-core = { path = "../../shared-libs/crates/start-core" }
