[package]
edition = "2024"
license = "MIT"
name = "start-registry"
repository = "https://github.com/Start9Labs/start-technologies"
version = "1.0.1"                                               # VERSION_BUMP

[[bin]]
name = "registrybox"
path = "src/main.rs"

[features]
beta = ["start-core/beta"]
console = ["start-core/console"]
default = []
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
start-core = { path = "../../shared-libs/crates/start-core" }
