[package]
edition = "2024"
license = "MIT"
name = "start-tunnel"
repository = "https://github.com/Start9Labs/start-technologies"
version = "1.1.2"                                               # VERSION_BUMP

[[bin]]
name = "tunnelbox"
path = "src/main.rs"

[features]
beta = ["start-core/beta"]
console = ["start-core/console"]
default = []
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
include_dir = "0.7.3"
start-core = { path = "../../shared-libs/crates/start-core" }
