[package]
edition = "2021"
name = "startos-backup-fs"
version = "1.0.0"

[features]
cli = ["clap", "env_logger"]
default = ["cli"]

[lib]
name = "backupfs"
path = "src/lib.rs"

[[bin]]
name = "startos-backup-fs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
bincode = { version = "2", features = ["serde"] }
chacha20 = { version = "0.10.1", features = ["zeroize"] }
clap = { version = "4.5.7", optional = true, features = ["derive", "cargo"] }
crc32fast = "1"
crossbeam-channel = "0.5"
ctrlc = "3.4.4"
env_logger = { version = "0.11", optional = true }
fd-lock-rs = "0.1.4"
fuser = { git = "https://github.com/Start9Labs/fuser.git", rev = "4ef196b", features = [
  "serializable",
] }
generic-array = { version = "1", features = ["serde"] }
imbl = { version = "3", features = ["serde"] }
io-uring = "0.7.11"
itertools = "0.13"
libc = "0.2"
log = "0.4"
nix = { version = "0.29.0", features = ["process"] }
pbkdf2 = "0.13"
ppv-lite86 = "0.2.17"
rand = "0.10"
reed-solomon-erasure = "6"
serde = { version = "*", features = ["derive"] }
sha2 = "0.11.0"
smallvec = "1"
typenum = "1"
zeroize = { version = "1.8.1", features = ["serde"] }
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
oneshot = "0.1.8"
tempdir = "0.3.7"
test-log = "0.2.16"
tokio = { version = "1.38.0", features = ["fs", "rt", "macros"] }

[[bench]]
harness = false
name = "throughput"
