[package]
authors = [
  "Keagan McClelland <keagan@start9.com>",
  "Aiden McClelland <aiden@start9.com>",
]
description = "Semver extension with upstream and downstream versions. Designed for package distributors"
documentation = "https://docs.rs/exver"
edition = "2021"
keywords = ["version", "semver", "embassy", "wasm"]
license = "MIT"
name = "exver"
readme = "README.md"
repository = "https://github.com/Start9Labs/start-technologies"
version = "0.2.1"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
serde = ["dep:serde", "emver/serde"]
wasm = ["js-sys", "wasm-bindgen", "getrandom/js"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
either = "1.6"
emver = "0.1.5"
fp-core = "0.1"
getrandom = "0.2.15"
itertools = "0.13"
js-sys = { version = "0.3.69", optional = true }
memchr = "2.7"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", optional = true }
smallvec = "1.13"
wasm-bindgen = { version = "0.2", optional = true, features = [
  "enable-interning",
] }
yasi = { path = "../yasi" }

[dev-dependencies]
proptest = "1.4.0"
serde_yaml = "0.9.14"
