[package]
authors = ["Changseok Han <freestrings@gmail.com>"]
name = "jsonpath_lib"
version = "0.3.0"

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

categories = ['wasm', "parser-implementations", "api-bindings"]
keywords = ["jsonpath", "json", "webassembly", "lua", "query"]

documentation = "https://docs.rs/jsonpath_lib/0.3.0/jsonpath_lib"
license = "MIT"
repository = "https://github.com/freestrings/jsonpath"

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[dependencies]
imbl-value = { path = "../imbl-value" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
env_logger = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jsonpath_lib"
path = "src/lib.rs"

#[profile.release]
#debug = true
#lto = false
