[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "A toolkit for creating JSON-RPC 2.0 servers with automatic cli bindings"
documentation = "https://docs.rs/rpc-toolkit"
edition = "2018"
keywords = ["json", "rpc", "cli"]
license = "MIT"
name = "rpc-toolkit"
repository = "https://github.com/Start9Labs/start-technologies"
version = "0.3.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cbor = ["serde_cbor"]
default = ["cbor"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
http = "1"
http-body-util = "0.1"
# hyper = { version = "1", features = ["server", "http1", "http2", "client"] }
imbl-value = { path = "../imbl-value" }
itertools = "0.14"
lazy_format = "2"
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
pin-project = "1"
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11", optional = true }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "net"] }
ts-rs = { version = "9.0.1", optional = true }
url = "2"
yajrc = "0.1"
