[package]
edition = "2021"
name = "uciedit"
version = "0.1.0"

[dependencies]
bumpalo = "3.17"
chrono = { version = "0.4.42", features = ["serde", "std"] }
fd-lock-rs = "0.1.4"
inpt = "0.1.5"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
typed-arena = "2.0.2"
uciedit_macros = { path = "../uciedit_macros" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
