[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
edition = "2018"
keywords = ["json", "json-patch"]
license = "MIT/Apache-2.0"
name = "json-patch"
readme = "README.md"
repository = "https://github.com/idubrov/json-patch"
version = "0.2.7-alpha.0"

[features]
default = ["diff"]
diff = []
nightly = []

[dependencies]
imbl-value = { path = "../../imbl-value" }
json-ptr = { path = "../json-ptr" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
imbl-value = { path = "../../imbl-value", features = ["arbitrary"] }
proptest = "1"
rand = "0.9.1"
serde_json = { version = "1.0.60", features = ["preserve_order"] }
