[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "macros for defining typed patch dbs"
edition = "2018"
license = "MIT"
name = "patch-db-macro"
repository = "https://github.com/Start9Labs/start-technologies"
version = "0.1.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
patch-db-macro-internals = { path = "../macro-internals" }
proc-macro2 = "1.0.1"
syn = "1.0.62"
